--- a/SomeChess/SomeChess.csproj
+++ b/SomeChess/SomeChess.csproj
@@ -9,7 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Code\Js\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
