--- a/SomeChess/package.json
+++ b/SomeChess/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "postcss-cli": "^11.0.0",
+    "postcss-cli": "^11.0.0"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.4.1"
   }
 }
