--- a/SomeChess/SomeChess.csproj
+++ b/SomeChess/SomeChess.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <Folder Include="Code\Js\" />
+    <Folder Include="Code\ComputerPlayer\" />
+    <Folder Include="Code\Social\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
