--- a/SomeChess/SomeChess.csproj
+++ b/SomeChess/SomeChess.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>56ab7929-b6b2-460e-bac0-85d7f0e60bd7</UserSecretsId>
@@ -16,6 +16,12 @@
     <Folder Include="Code\Js\" />
     <Folder Include="Code\ComputerPlayer\" />
     <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Private.CoreLib">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.NETCore.App\7.0.14\System.Private.CoreLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
